# web-image-converter

./: .gitignore  Cargo.toml  Justfile  README.md  about.hbs  about.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: unit-test.yml
src/: avif.rs  bmp.rs  jpeg.rs  lib.rs  png.rs  webp.rs
terraform/github/: label.tf  locals.tf  repository.tf  rulesets.tf
